infra/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-client-deployment
  labels:
    type: todo-client-deployment
spec:
  template:
    metadata:
      name: todo-client
      labels:
        component: todo-client
        app: todo-app
    spec:
      containers:
        - name: todo-client-service
          image: jukeaban/todok8client
          ports:
            - containerPort: 3000
  selector:
    matchLabels:
      component: todo-client
  replicas: 1
