infra/k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-service
  labels:
    app: todo-app
spec:
  replicas: 1
  template:
    metadata:
      name: mongodb
      labels:
        component: mongodb
    spec:
      containers:
        - name: mongo-service
          image: mongo
          ports:
            - containerPort: 27017
  selector:
    matchLabels:
      component: mongodb
