infra/k8s/todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-server-deployment
  labels:
    app: todo-app
    type: todo-app-deployment
spec:
  template:
    metadata:
      name: todo-server-pod
      labels:
        app: todo-app
        type: todo-app-pod
    spec:
      containers:
        - name: todo-service
          image: jukeaban/todok8todo
          ports:
            - containerPort: 3002
  selector:
    matchLabels:
      type: todo-app-pod
  replicas: 1
