infra/k8s/todo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todo-pod
  labels:
    todoapp: todo-pod
spec:
  containers:
    - name: todo-server
      image: jukeaban/todok8todo
      ports:
        - containerPort: 3002
