infra/k8s/todo-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-server-deployment
  labels:
    type: todo-server-deployment
spec:
  template:
    metadata:
      name: todo-server
      labels:
        component: todo-server
        app: todo-app
    spec:
      containers:
        - name: todo-server-service
          image: jukeaban/todok8todo
          ports:
            - containerPort: 3002
  selector:
    matchLabels:
      component: todo-server
  replicas: 1
