infra/k8s/todo-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-node-port
spec:
  type: NodePort
  ports:
    #      Map MY PORT 30000 to 3000 of the selected pod
    - port: 3000
      targetPort: 3000
      nodePort: 30000
      name: "client"
    #    Convention is that both of these are the same, but port isn't needed

    - port: 3001
      targetPort: 3001
      nodePort: 30002
      name: "user"

    - port: 3002
      targetPort: 3002
      name: "todo"
      nodePort: 30001

  selector:
    #     Target component label for a single one deployment
    #    target app label for many deployments
    app: todo-app
