infra/k8s/todo-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: todo-server
  ports:
    - port: 3002
      targetPort: 3002
