infra/k8s/user-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: user-server
  ports:
    - port: 3001
      targetPort: 3001
