infra/k8s/gateway-todo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todo-server-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  # use default istio gateway, proxy in istio-system namespace
  # which exposes it using k8s service of load balancer
  # which creates an AWS ELB of type Classic
  servers: # defines L7 host, port, and protocol
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
