infra/k8s/mongo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mongodb-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - hosts:
        - '*'
      port:
        number: 27017
        protocol: MONGO
        name: mongo
