infra/k8s/client-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client-virtual-service
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - todo-server-gateway # The name of our Gateway service
  http:
    - match:
        - uri:
            prefix: '/'
      rewrite:
        uri: "/"
      route:
        - destination:
            host: client-cluster-ip-service
            port:
              number: 3000
