infra/k8s/mongo-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mongo-virtual-service
spec:
  hosts:
    - mongo-cluster-ip-service.svc.cluster.local # name of internal Mongo service
  gateways:
    - mongodb-gateway
  tcp:
    - match:
        - port: 27017
      route:
        - destination:
            host: mongo-cluster-ip-service.svc.cluster.local
            port:
              number: 27017
